# novel2audiobook

./: .gitignore  127.0.0.1.json  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md  acgnai-remove-unneed.py  acgnai-voice.json  config.yml  gpt_sovits-remove-unneed.py  readme.md  sovits2qwen3.py  sovits_voices.json
.github/workflows/: ci.yml
examples/: epub2txt.rs
src/: acgnai.rs  config.rs  gpt_sovits.rs  lib.rs  llm.rs  main.rs  processor.rs  script.rs  setup.rs  sovits.rs  state.rs  tts.rs  workflow.rs
src/core/: config.rs  io.rs  mod.rs  web_io.rs
src/qwen3-tts/: client.rs  server.rs
src/qwen3_tts/: client.rs  server.rs
src/services/: llm.rs  mod.rs  script.rs  setup.rs  workflow.rs
src/services/tts/: edge.rs  gpt_sovits.rs  gpt_sovits_config.rs  mod.rs  qwen3_tts.rs
src/services/tts/qwen3_api/: client.rs  server.rs
src/tts/: acgnai.rs  edge.rs  gpt_sovits.rs  mod.rs  qwen3_tts.rs  sovits.rs
src/ui/: mod.rs
src/utils/: audio.rs  mod.rs
testassets/input_chapters/: 00001.txt
