[package]
name = "novel2audiobook"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_norway = "0.9.34-deprecated"
serde_json = "1.0"
reqwest = { version = "0.13.1", features = ["json", "native-tls", "multipart", "stream"] }
inquire = "0.9.2"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
async-trait = "0.1.89"
edge-tts = { git = "https://github.com/BlacK201/edge-tts" }
rand = "0.9.2"
url = "2.5.8"
epub = "2.1.5"
html2text = "0.16.6"
futures-util = "0.3.31"
tar = "0.4.44"
indicatif = "0.18.3"
flate2 = "1.1.8"

[dev-dependencies]
tempfile = "3.24.0"
